add recently added section, book view and read view

--- a/app/globals.css
+++ b/app/globals.css
@@ -67,3 +67,9 @@
     @apply bg-background text-foreground;
   }
 }
+
+.pdf-contents li {
+  padding-left: 10px;
+  padding-bottom: 10px;
+  text-transform: capitalize;
+}
